# codecraft-redis-rust

./: Cargo.toml  README.md  dump.rdb
src/: cmd.rs  config.rs  lib.rs  main.rs  replication.rs  repository.rs  resp.rs  runner.rs  snapshot.rs
src/command/: config_get.rs  echo.rs  executor.rs  get.rs  info_replication.rs  keys.rs  mod.rs  parser.rs  ping.rs  set.rs
src/snapshots/: codecrafters_redis__snapshot__specs_for_load__sut_parses_entries_of_rdb_correctly.snap
tests/: lib.rs
tests/e2e/: client.rs  main.rs  server.rs  specs_for_config.rs  specs_for_echo.rs  specs_for_get.rs  specs_for_info.rs  specs_for_keys.rs  specs_for_ping.rs  specs_for_rdb.rs  specs_for_set.rs
