[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0"
bytes = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-stream = "0"
futures = "0"

[dev-dependencies]
fake = { version = "4", features = ["uuid"] }
rstest = "0"
tempfile = "3"
insta = "1"
